# LabFiles

./: README.md  Torque_generator.py  cartesian_impedance_QLMPC_controller.cpp  cartesian_impedance_QLMPC_controller.h  dataDict.pkl
Andrea_folder/Package/: Q_LMPC_simplified.py
Andrea_folder/franka_example_controllers/src/: Torque_controller.cpp  cartesian_impedance_QLMPC_controller.cpp  cartesian_impedance_example_controller.cpp
Esperimenti/: Confronto_dataDict_robot_py2.pkl  X_MEAN.txt  X_NORM.txt  X_STD.txt  X_TOT.txt  Y_NORM.txt  Y_TOT.txt
Lab Scripts/: Q_LMPC.py  cartesian_impedance_QLMPC_controller.cpp  cartesian_impedance_QLMPC_controller.h  franka_example_controllers.yaml  franka_example_controllers_plugin.xml
Package/: Q_LMPC_simplified.py
franka_example_controllers/: CMakeLists.txt  franka_example_controllers_plugin.xml  package.xml
franka_example_controllers/config/: franka_example_controllers.yaml
franka_example_controllers/include/franka_example_controllers/: DMP_controller.h  Torque_controller.h  cartesian_impedance_QLMPC_controller.h
franka_example_controllers/launch/: DMP_controller.launch  Torque_controller.launch  cartesian_impedance_example_controller.launch  cartesian_pose_example_controller.launch
franka_example_controllers/src/: DMP_controller.cpp  Torque_controller.cpp  cartesian_impedance_QLMPC_controller.cpp
iiwa_stack_motion_test/: CMakeLists.txt  CMakeLists.txt.save  iiwa_stack_motion_test.kdev4  package.xml
iiwa_stack_motion_test/cfg/: iiwa_stack_motion_test_configparam.yaml
iiwa_stack_motion_test/devel/: _setup_util.py  setup.sh
iiwa_stack_motion_test/launch/: Jey_MBRL_controller.launch  Jey_initial_data_collector.launch  Jey_redundancy_optimization.launch  iiwa_stack_motion_test.launch
iiwa_stack_motion_test/src/: MBRL_Controller.py  Manipulability_Ellipsoid_Plot.py  ReadMe.txt  Redundancy_Optimizer.py  TF_ROS_Test.py  iiwa_MBRL_interface.cpp  iiwa_initial_random_impedance_commander.cpp  iiwa_variable_impedance_data_logger.cpp  vertical_motion_test.cpp
iiwa_stack_motion_test/src/modern_robotics/: core.py
src/: Cost.npy  Cost_robot.npy  Cost_robot2.npy  Q_LMPC.py  Q_LMPC_Forceconst.py  Torque_generator.py  dataDict_robot2.pkl  tensors.pt
src/Bagfiles/: 2021-05-21-18-01-06_Pose.bag  2021-05-21-18-01-08_Vel.bag  2021-05-21-18-01-09_Wrench.bag  Pose.txt  Velocity.txt  Wrench.txt
src/andrea_pkg/: CMakeLists.txt  package.xml
(+3 files in other folders)
